📦 Finished menu, and restructure the app for clean look

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,73 @@
       html {
         padding: 0;
         margin: 0;
+        font-family:'Courier New', Courier, monospace
       }
-
       canvas {
         display: block;
       }
+      #blocker {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.788);
+			}
+			#instructions {
+				width: 100%;
+				height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+				cursor: pointer;
+			}
+      #instructions span {
+        font-size: 4rem;
+        font-weight: bold;
+        letter-spacing: 5px;
+        color: rgb(240, 240, 240);
+        background: #38A169;
+        box-shadow: 2px 2px 2px 2px rgba(3, 3, 3, 0.637);
+        padding: 2px 10px;
+        border-radius: 0.5rem;
+      }
+      #instructions li {
+        list-style: none;
+        margin: 5px 0;
+        font-weight: bold;
+        color: rgb(240, 240, 240);
+        font-size: 1.1rem;
+      }
+      #instructions small {
+        color: white;
+      }
+      .esc {
+        position: absolute;
+        background: #38A169;
+        box-shadow: 2px 2px 2px 2px rgba(3, 3, 3, 0.637);
+        letter-spacing: 5px;
+        color: rgb(240, 240, 240);
+        border-radius: 0.5rem;
+        padding: 10px 10px;
+        font-weight: bold;
+        letter-spacing: 5px;
+        right: 5px;
+        top: 5px
+      }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="esc" id="esc">ESC To Exit</div>
+    <div id="blocker">
+			<div id="instructions">
+        <span>START</span>
+        <ul>
+          <li>W, A, S, D: Move</li>
+          <li>SPACE: Jump</li>
+          <li>MOUSE: Look Around</li>
+        </ul>
+        <small>(Click multiple times if one click does not work)</small>
+			</div>
+		</div>
+  </body>
 </html>
