📦 Updated number of tree

--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Forest Simulation</title>
-    <style>
-      body,
+<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><title>Forest Simulation</title><style>body,
       html {
         padding: 0;
         margin: 0;
@@ -62,21 +54,4 @@
         letter-spacing: 5px;
         right: 5px;
         top: 5px
-      }
-    </style>
-  </head>
-  <body>
-    <div class="esc" id="esc">ESC To Exit</div>
-    <div id="blocker">
-			<div id="instructions">
-        <span>START</span>
-        <ul>
-          <li>W, A, S, D: Move</li>
-          <li>SPACE: Jump</li>
-          <li>MOUSE: Look Around</li>
-        </ul>
-        <small>(Click multiple times if one click does not work)</small>
-			</div>
-		</div>
-  </body>
-</html>
+      }</style></head><body><div class="esc" id="esc">ESC To Exit</div><div id="blocker"><div id="instructions"><span>START</span><ul><li>W, A, S, D: Move</li><li>SPACE: Jump</li><li>MOUSE: Look Around</li></ul><small>(Click multiple times if one click does not work)</small></div></div><script src="vendor.js"></script><script src="bundle.js"></script></body></html>
